# runpod-gpu-marker-pdf-convert

./: METHOD-COMPARISON.md  README.md
filesamples/: README.md
filesamples/office/: README.md  sample-small.pptx
officeconvert-cpu/: .gitignore  Makefile  pyproject.toml
officeconvert-cpu/scripts/: convert_with_markitdown.py  convert_with_pandoc.py  convert_with_pptx2md.py
pdfconvert-cpu/: .gitignore  Makefile  pyproject.toml
pdfconvert-gpu/: .gitignore  Makefile  pyproject.toml
pdfconvert-gpu/scripts/: configure_ssh.py  prewarm_marker_models.py  resolve_marker_settings.py
