[project]
name = "pdfconvert-cpu"
version = "0.1.0"
description = "Local CPU-oriented PDF conversion workspace."
requires-python = ">=3.11,<3.13"
dependencies = [
    "docling",
    "pymupdf4llm",
    "torch==2.10.0",
    "torchvision==0.25.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
cache-dir = "./.uv-cache"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
