[project]
name = "marker-pdf-convert"
version = "0.1.0"
description = "Minimal uv-managed workspace for converting local PDFs to Markdown with marker."
requires-python = ">=3.11,<3.13"
dependencies = [
    "marker-pdf",
    "psutil",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
cache-dir = "./.uv-cache"
